feat: Extending `SingleConstraintAssertion` to check Justification/indictment (#659)
This PR modifies the `SingleConstraintAssertion` to allow for verifying
constraint justifications and indictments. 
The proposed approach uses the standard `equals` function for making
comparisons.