@@ -1,16 +1,17 @@
 package ai.timefold.solver.test.impl.score.stream;
 
+import static java.util.Collections.emptyList;
 import static java.util.Objects.requireNonNull;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 
 import ai.timefold.solver.constraint.streams.common.AbstractConstraint;
 import ai.timefold.solver.constraint.streams.common.AbstractConstraintStreamScoreDirectorFactory;
@@ -18,6 +19,7 @@ import ai.timefold.solver.constraint.streams.common.ScoreImpactType;
 import ai.timefold.solver.core.api.score.Score;
 import ai.timefold.solver.core.api.score.constraint.ConstraintMatchTotal;
 import ai.timefold.solver.core.api.score.constraint.Indictment;
+import ai.timefold.solver.core.api.score.stream.ConstraintJustification;
 import ai.timefold.solver.core.impl.score.DefaultScoreExplanation;
 import ai.timefold.solver.core.impl.score.definition.ScoreDefinition;
 import ai.timefold.solver.core.impl.util.Pair;
@@ -30,6 +32,7 @@ public final class DefaultSingleConstraintAssertion<Solution_, Score_ extends Sc
     private final ScoreDefinition<Score_> scoreDefinition;
     private final Score_ score;
     private final Collection<ConstraintMatchTotal<Score_>> constraintMatchTotalCollection;
+    private final Collection<ConstraintJustification> justificationCollection;
     private final Collection<Indictment<Score_>> indictmentCollection;
 
     DefaultSingleConstraintAssertion(AbstractConstraintStreamScoreDirectorFactory<Solution_, Score_> scoreDirectorFactory,
@@ -40,28 +43,45 @@ public final class DefaultSingleConstraintAssertion<Solution_, Score_ extends Sc
         this.score = requireNonNull(score);
         this.constraintMatchTotalCollection = new ArrayList<>(requireNonNull(constraintMatchTotalMap).values());
         this.indictmentCollection = new ArrayList<>(requireNonNull(indictmentMap).values());
+        this.justificationCollection = this.constraintMatchTotalCollection.stream()
+                .flatMap(c -> c.getConstraintMatchSet().stream())
+                .map(c -> (ConstraintJustification) c.getJustification())
+                .distinct()
+                .toList();
     }
 
     @Override
-    public void penalizesBy(int matchWeightTotal, String message) {
+    public SingleConstraintAssertion justifiesWith(String message, ConstraintJustification... justifications) {
+        assertJustification(message, justifications);
+        return this;
+    }
+
+    @Override
+    public SingleConstraintAssertion indictsWith(String message, Object... indictments) {
+        assertIndictments(message, indictments);
+        return this;
+    }
+
+    @Override
+    public void penalizesBy(String message, int matchWeightTotal) {
         validateMatchWeighTotal(matchWeightTotal);
         assertImpact(ScoreImpactType.PENALTY, matchWeightTotal, message);
     }
 
     @Override
-    public void penalizesBy(long matchWeightTotal, String message) {
+    public void penalizesBy(String message, long matchWeightTotal) {
         validateMatchWeighTotal(matchWeightTotal);
         assertImpact(ScoreImpactType.PENALTY, matchWeightTotal, message);
     }
 
     @Override
-    public void penalizesBy(BigDecimal matchWeightTotal, String message) {
+    public void penalizesBy(String message, BigDecimal matchWeightTotal) {
         validateMatchWeighTotal(matchWeightTotal);
         assertImpact(ScoreImpactType.PENALTY, matchWeightTotal, message);
     }
 
     @Override
-    public void penalizes(long times, String message) {
+    public void penalizes(String message, long times) {
         assertMatchCount(ScoreImpactType.PENALTY, times, message);
     }
 
@@ -71,25 +91,25 @@ public final class DefaultSingleConstraintAssertion<Solution_, Score_ extends Sc
     }
 
     @Override
-    public void rewardsWith(int matchWeightTotal, String message) {
+    public void rewardsWith(String message, int matchWeightTotal) {
         validateMatchWeighTotal(matchWeightTotal);
         assertImpact(ScoreImpactType.REWARD, matchWeightTotal, message);
     }
 
     @Override
-    public void rewardsWith(long matchWeightTotal, String message) {
+    public void rewardsWith(String message, long matchWeightTotal) {
         validateMatchWeighTotal(matchWeightTotal);
         assertImpact(ScoreImpactType.REWARD, matchWeightTotal, message);
     }
 
     @Override
-    public void rewardsWith(BigDecimal matchWeightTotal, String message) {
+    public void rewardsWith(String message, BigDecimal matchWeightTotal) {
         validateMatchWeighTotal(matchWeightTotal);
         assertImpact(ScoreImpactType.REWARD, matchWeightTotal, message);
     }
 
     @Override
-    public void rewards(long times, String message) {
+    public void rewards(String message, long times) {
         assertMatchCount(ScoreImpactType.REWARD, times, message);
     }
 
@@ -135,6 +155,91 @@ public final class DefaultSingleConstraintAssertion<Solution_, Score_ extends Sc
         throw new AssertionError(assertionMessage);
     }
 
+    private void assertJustification(String message, ConstraintJustification... justifications) {
+        // Valid empty comparison
+        boolean emptyJustifications = justifications == null || justifications.length == 0;
+        if (emptyJustifications && justificationCollection.isEmpty()) {
+            return;
+        }
+
+        // No justifications
+        if (emptyJustifications && !justificationCollection.isEmpty()) {
+            String assertionMessage = buildAssertionErrorMessage("Justification", constraint.getConstraintRef().constraintId(),
+                    emptyList(), emptyList(), justificationCollection, message);
+            throw new AssertionError(assertionMessage);
+        }
+
+        // Empty justifications
+        if (justificationCollection.isEmpty()) {
+            String assertionMessage = buildAssertionErrorMessage("Justification", constraint.getConstraintRef().constraintId(),
+                    emptyList(), Arrays.asList(justifications), emptyList(), message);
+            throw new AssertionError(assertionMessage);
+        }
+
+        List<Object> noneMatchedList = new LinkedList<>();
+        List<Object> invalidMatchList = new LinkedList<>();
+        for (Object justification : justifications) {
+            // No match
+            if (justificationCollection.stream().noneMatch(j -> justification.getClass().isAssignableFrom(j.getClass()))) {
+                noneMatchedList.add(justification);
+                continue;
+            }
+            // Test invalid match
+            if (justificationCollection.stream().noneMatch(justification::equals)) {
+                invalidMatchList.add(justification);
+            }
+        }
+        if (noneMatchedList.isEmpty() && invalidMatchList.isEmpty()) {
+            return;
+        }
+        String assertionMessage = buildAssertionErrorMessage("Justification", constraint.getConstraintRef().constraintId(),
+                noneMatchedList, invalidMatchList, justificationCollection, message);
+        throw new AssertionError(assertionMessage);
+    }
+
+    private void assertIndictments(String message, Object... indictments) {
+        boolean emptyIndictments = indictments == null || indictments.length == 0;
+        // Valid empty comparison
+        if (emptyIndictments && indictmentCollection.isEmpty()) {
+            return;
+        }
+
+        // No indictments
+        Collection<Object> indictmentObjectList = indictmentCollection.stream().map(Indictment::getIndictedObject).toList();
+        if (emptyIndictments && !indictmentObjectList.isEmpty()) {
+            String assertionMessage = buildAssertionErrorMessage("Indictment", constraint.getConstraintRef().constraintId(),
+                    emptyList(), emptyList(), indictmentObjectList, message);
+            throw new AssertionError(assertionMessage);
+        }
+
+        // Empty indictments
+        if (indictmentObjectList.isEmpty()) {
+            String assertionMessage = buildAssertionErrorMessage("Indictment", constraint.getConstraintRef().constraintId(),
+                    emptyList(), Arrays.asList(indictments), emptyList(), message);
+            throw new AssertionError(assertionMessage);
+        }
+
+        List<Object> noneMatchedList = new LinkedList<>();
+        List<Object> invalidMatchList = new LinkedList<>();
+        for (Object indictment : indictments) {
+            // No match
+            if (indictmentObjectList.stream().noneMatch(j -> indictment.getClass().isAssignableFrom(j.getClass()))) {
+                noneMatchedList.add(indictment);
+                continue;
+            }
+            // Test invalid match
+            if (indictmentObjectList.stream().noneMatch(indictment::equals)) {
+                invalidMatchList.add(indictment);
+            }
+        }
+        if (noneMatchedList.isEmpty() && invalidMatchList.isEmpty()) {
+            return;
+        }
+        String assertionMessage = buildAssertionErrorMessage("Indictment", constraint.getConstraintRef().constraintId(),
+                noneMatchedList, invalidMatchList, indictmentObjectList, message);
+        throw new AssertionError(assertionMessage);
+    }
+
     /**
      * Returns sum total of constraint match impacts,
      * deduced from constraint matches.
@@ -169,7 +274,7 @@ public final class DefaultSingleConstraintAssertion<Solution_, Score_ extends Sc
         List<Number> impacts = Arrays.stream(levelNumbers)
                 .distinct()
                 .filter(matchWeight -> !Objects.equals(matchWeight, zero))
-                .collect(Collectors.toList());
+                .toList();
         switch (impacts.size()) {
             case 0:
                 return zero;
@@ -278,6 +383,67 @@ public final class DefaultSingleConstraintAssertion<Solution_, Score_ extends Sc
                 "Constraint", constraintId,
                 expectedImpactLabel,
                 DefaultScoreExplanation.explainScore(score, constraintMatchTotalCollection, indictmentCollection));
+    }
+
+    private static String buildAssertionErrorMessage(String type, String constraintId, Collection<?> noneMatchedCollection,
+            Collection<?> invalidMatchedCollection, Collection<?> actualCollection,
+            String message) {
+        String expectation = message != null ? message : "Broken expectation.";
+        StringBuilder preformattedMessage = new StringBuilder("%s%n")
+                .append("%18s: %s%n");
+        List<Object> params = new LinkedList<>();
+        params.add(expectation);
+        params.add(type);
+        params.add(constraintId);
+        if (!noneMatchedCollection.isEmpty()) {
+            preformattedMessage.append("%22s%n");
+            preformattedMessage.append("%24s%n");
+            params.add("No match:");
+            params.add("Expected:");
+            noneMatchedCollection.forEach(indictment -> {
+                preformattedMessage.append("%26s%s%n");
+                params.add("");
+                params.add(indictment);
+            });
+            preformattedMessage.append("%24s%n");
+            params.add("Actual:");
+            actualCollection.forEach(actual -> {
+                preformattedMessage.append("%26s%s%n");
+                params.add("");
+                params.add(actual);
+            });
+        }
+        if (!invalidMatchedCollection.isEmpty() || (noneMatchedCollection.isEmpty() && !actualCollection.isEmpty())) {
+            preformattedMessage.append("%22s%n");
+            preformattedMessage.append("%24s%n");
+            params.add("Invalid match:");
+            params.add("Expected:");
+            if (invalidMatchedCollection.isEmpty()) {
+                preformattedMessage.append("%26s%s%n");
+                params.add("");
+                params.add("No " + type);
+            } else {
+                invalidMatchedCollection.forEach(indictment -> {
+                    preformattedMessage.append("%26s%s%n");
+                    params.add("");
+                    params.add(indictment);
+                });
+            }
+            preformattedMessage.append("%24s%n");
+            params.add("Actual:");
+            if (actualCollection.isEmpty()) {
+                preformattedMessage.append("%26s%s%n");
+                params.add("");
+                params.add("No " + type);
+            } else {
+                actualCollection.forEach(actual -> {
+                    preformattedMessage.append("%26s%s%n");
+                    params.add("");
+                    params.add(actual);
+                });
+            }
+        }
+        return String.format(preformattedMessage.toString(), params.toArray());
     }
 
     private String getImpactTypeLabel(ScoreImpactType scoreImpactType) {
